--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -4,9 +4,9 @@
   <title>Alejandro's Page</title>
   <link rel="stylesheet" href="../../css/main.css">
 </head>
+  <body>
 
-<body>
-  <img src="2.png">
+  <img src="Execise2.png">
 
-</body>
+  </body>
 </html>
