--- a/Exercise1/4/index.html
+++ b/Exercise1/4/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>Alejandro's Page</title>
-  <link rel="stylesheet" href="../../css/main.css"> 
+  <link rel="stylesheet" href="../../css/main.css">
 </head>
 
 <body>
-  <img scr="4.png">
+  <img src="4.png">
 
 </body>
 </html>
