--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <a href="Exercise2/index.html">Exercise 2</a>
   <a href="Exercise3/index.html">Exercise 3</a>
   <a href="Exercise4/index.html">Exercise 4</a>
+  <a href="Project1/index.html"><b>Project 1</b></a>
 </body>
 </html>
