--- a/PracticeClassesandIDs/index.html
+++ b/PracticeClassesandIDs/index.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
+  <div id="container">
   <h1>Seven Principles of Typographic Contrast </h1>
 
 
-<p>In a seminal booklet that he both designed and wrote, <strong>Carl Dair</strong> showed how in typography, as in music, harmony and contrast are the keys to composition.</p>
+<p class="intro">In a seminal booklet that he both designed and wrote, <strong>Carl Dair</strong> showed how in typography, as in music, harmony and contrast are the keys to composition.</p>
 
 <h3><strong>Written by John D. Berry</strong></h3>
 
@@ -87,5 +88,6 @@ Graphic form and musical form have a common denominator: rhythm and emphasis, ha
 
 <p>Most of the time, we use more than one kind of contrast together, in order to make the differences between visual elements even more obvious. We can use all of Dair's seven kinds of contrast at once, if we're skillful; he refers to this as typographic "chords." (One of the chapter titles in "<i>Design With Type</i>" is "<i>Multiplying the Contrasts.</i>") But breaking them down like this into simple oppositions makes it easier to use them consciously; it keeps us from getting our layouts all muddied up through trying to change too many things at once without thinking about what we're doing. I've found Carl Dair's analysis of typographic contrast -- and especially the visual flair with which he presents it -- an invaluable tool in the practice of graphic design.</p>
 
+</div>
 </body>
 </html>
