--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 </head>
 
 <body>
-  <a href="Exercise0/index.html">Exercise 0</a>
-  <a href="Exercise1/index.html">Exercise 1</a>
-  <a href="Exercise2/index.html">Exercise 2</a>
-  <a href="Exercise3/index.html">Exercise 3</a>
-  <a href="Exercise4/index.html">Exercise 4</a>
-  <a href="Project1/index.html"><b>Project 1</b></a>
+  <a href="Exercise0/index.html">Exercise 0</a></p>
+  <a href="Exercise1/index.html">Exercise 1</a></p>
+  <a href="Exercise2/index.html">Exercise 2</a></p>
+  <a href="Exercise3/index.html">Exercise 3</a></p>
+  <a href="Exercise4/index.html">Exercise 4</a></p>
+    <a href="Exercise5/index.html">Exercise 5</a></p>
+  <a href="Exercise6/index.html">Exercise 6</a></p>
+  <a href="Project1/index.html"><b>Project 1</b></a></p>
 </body>
 </html>
