--- a/Project1/3/index.html
+++ b/Project1/3/index.html
@@ -4,7 +4,8 @@
   <title></title>
   <meta charset="utf-8">
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
   Even though we'll fall apart
   Can't remember how to start
   Little lies
-  You like to call me <a href="../2/index.html">koala</a>
+  You like to call me <a href="../4/index.html">koala</a>
   I'll be your simba, you're nala
   Wherever you go I'll follow
 
