--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a href="Exercise4/index.html">Exercise 4</a></p>
     <a href="Exercise5/index.html">Exercise 5</a></p>
   <a href="Exercise6/index.html">Exercise 6</a></p>
+  <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
 </body>
 </html>
