--- a/Exercise6/Pattern1/index.html
+++ b/Exercise6/Pattern1/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Exercise6</title>
-  <meta charset="utf-8">
-
-  <link rel="stylesheet" href="css/main.css">
-</head>
-
+  <head>
+    <title>Exercise 6</title>
+    <link rel="stylesheet" href="../css/main.css">
+  </head>
   <body>
     <div id="container">
       <div class="tile1"></div>
@@ -767,6 +764,28 @@
       <div class="tile3"></div>
       <div class="tile1"></div>
       <div class="tile2"></div>
+      <div class="tile3"></div>
+      <div class="tile1"></div>
+      <div class="tile2"></div>
+      <div class="tile3"></div>
+      <div class="tile1"></div>
+      <div class="tile2"></div>
+      <div class="tile3"></div>
+      <div class="tile1"></div>
+      <div class="tile2"></div>
+      <div class="tile3"></div>
+      <div class="tile1"></div>
+      <div class="tile2"></div>
+      <div class="tile3"></div>
+      <div class="tile1"></div>
+      <div class="tile2"></div>
+      <div class="tile3"></div>
+      <div class="tile1"></div>
+      <div class="tile2"></div>
+      <div class="tile3"></div>
+      <div class="tile1"></div>
+      <div class="tile2"></div>
+      <div class="tile3"></div>
     </div>
   </body>
 </html>
