--- a/Exercise6/index.html
+++ b/Exercise6/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Alejandro's Page</title>
+  <title>Exercise6</title>
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
