--- a/Project1/1/index.html
+++ b/Project1/1/index.html
@@ -8,12 +8,13 @@
 <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part1">
 
 
 
-    <h1><a href="../2/index.html"> What Kind Of Love</a></h1>
-    By Childish Gambino
+ <h1><a id="text1" href="../2/index.html"> What Kind Of Love</a></h1>
+
+  <a>  By Childish Gambino </a>
 
 </body>
 </html>
