--- a/Project1/2/index.html
+++ b/Project1/2/index.html
@@ -5,16 +5,13 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
-</head>
-
-<body>
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Gochi+Hand|Lato|Mansalva|Open+Sans|Permanent+Marker|Roboto&display=swap" rel="stylesheet">
+<body class="part2">
 
 
   What kind of love just stays the same</p>
-  What kind of love don't die alone</p>
-  What kind of love would take this long</p>
-  What kind of love don't make you<a href="../3/index.html"> old</a></p>
+  What kind of love don't die <a id="text2" href="../3/index.html">alone</a></p>
+
 
 </body>
 </html>
