--- a/Project1/4/index.html
+++ b/Project1/4/index.html
@@ -5,13 +5,15 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Open+Sans|Permanent+Marker|Roboto|Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part4">
 
-Drove for hours just to see your <a href="../5/index.html">face</a>
 
+  Cause you satisfy my <a id="text4" href="../5/index.html"> heart</a></p>
+  Even though we'll fall apart
+  Can't remember how to start
 
 </body>
 </html>
