--- a/Project1/6/index.html
+++ b/Project1/6/index.html
@@ -5,19 +5,16 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part6">
 
-  Drove for hours just to see your face
-  We should've talked if just to clear the space
-  But now we stare at each other
-  Buryin' whatever feeling that was
-  He texts to keep your heart D-stacks
-  <a href="../7/index.html">Keep your heart</a>
-  These girls are smart D-stacks
-  These girls are smart
+  You like to call me <a  id="text6" href="../7/index.html">koala</a></p>
+  I'll be your simba, you're nala</p>
+
+  Wherever you go I'll follow</p>
+
 
 
 </body>
