--- a/Project1/9/index.html
+++ b/Project1/9/index.html
@@ -5,15 +5,16 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part9">
 
+  Drove for hours just to see your face</p>
+  We should've talked if just to clear the space</p>
+  But now we stare at each other</p>
+  <a id="text9" href="../10/index.html">Buryin'</a> whatever feeling that was</p>
 
-  What kind of love don't <a href="../10/index.html">hurt</a> so bad
-  What kind of love don't feel this way
-  What kind of love would make me fold
 
 
 </body>
