--- a/Project1/3/index.html
+++ b/Project1/3/index.html
@@ -5,19 +5,15 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Open+Sans|Permanent+Marker|Roboto|Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part3">
+
+  What kind of love would take this long</p>
+  What kind of love don't make you<a id="text3" href="../4/index.html"> old</a></p>
 
 
-  Cause you satisfy my heart
-  Even though we'll fall apart
-  Can't remember how to start
-  Little lies
-  You like to call me <a href="../4/index.html">koala</a>
-  I'll be your simba, you're nala
-  Wherever you go I'll follow
 
 
 </body>
