--- a/Project1/5/index.html
+++ b/Project1/5/index.html
@@ -5,10 +5,13 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
-<body>
-  <a href="../6/index.html">Sorry</a>
+<body class="part5">
+  <div id="link5">
 
+
+  <a id="text5" href="../6/index.html">Little Lies</a>
+</div>
 </body>
 </html>
