--- a/Project1/7/index.html
+++ b/Project1/7/index.html
@@ -5,12 +5,15 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part7">
 
-<a href="../8/index.html">I don't know</a>
+  Drove for hours just to see your <a id="text7" href="../8/index.html">face</a>
+
+
+
 
 
 </body>
