--- a/Project1/8/index.html
+++ b/Project1/8/index.html
@@ -5,19 +5,15 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part8">
+<div id="link8">
 
-  Why get a dog, it's just gonna <a href="../9/index.html">die</a>
-  Everything you love's just gonna leave you one day
-  And that's just real shit he can still spit
-  But what's the point
-  I said a lot of stupid stuff
-  I think that I was growin' up
+  <a id="text8" href="../9/index.html">sorry</a>
 
-
+</div>
 
 </body>
 </html>
