--- a/Project1/10/index.html
+++ b/Project1/10/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Chango|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
 <body class="part10">
