--- a/Project1/12/index.html
+++ b/Project1/12/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Chango|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part12">
 
-  Why get a dog, it's just gonna <a href="../13/index.html">die</a>
-  Everything you love's just gonna leave you one day
-  And that's just real shit he can still spit
-  But what's the point
+  Why get a dog, it's just gonna <a id="text12" href="../13/index.html">die</a></p>
+  Everything you love's just gonna leave you one day</p>
+  And that's just real shit he can still spit</p>
+  But what's the point</p>
 
 
 </body>
