--- a/Exercise8/TennisCourt/index.html
+++ b/Exercise8/TennisCourt/index.html
@@ -7,9 +7,14 @@
 
 <body>
     <div id="container">
-        <div class="tile1"></div>
-        <div class="tile2"></div>
-        <div class="tile3"></div>
+        <div class="side"></div>
+        <div class="back"></div>
+            <div class="center">
+                <div class="middle"></div>
+                  <div class="middle2"></div>
+                </div>
+        <div class="side2"></div>
+
 
 
 
