--- a/Project1/15/index.html
+++ b/Project1/15/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Chango|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part15">
 
 
-    What kind of love don't <a href="../16/index.html">hurt</a> so bad
+    What kind of love don't <a id="text 15"href="../16/index.html">hurt</a> so bad
     What kind of love don't feel this way
     What kind of love would make me fold
 
