--- a/Project1/16/index.html
+++ b/Project1/16/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Chango|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Neucha|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<bodyc class="part16">
 
 
-    <a href="../17/index.html">Little lies</a>
+    <a id="text16"href="../17/index.html">Little lies</a>
 
 
 
