--- a/Exercise8/TennisCourt/index.html
+++ b/Exercise8/TennisCourt/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Exercise 6</title>
+    <title>Tennis Court</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
-
-<body>
-    <div id="container">
-        <div class="side"></div>
+  <body>
+    <div id="court" class="cf">
+      <div class="side"></div>
+      <div class="center">
         <div class="back"></div>
-            <div class="center">
-                <div class="middle"></div>
-                  <div class="middle2"></div>
-                </div>
-        <div class="side2"></div>
-
-
-
-
+        <div class="middle"></div>
+        <div class="middle"></div>
       </div>
-    </body>
-    </html>
+      <div class="side"></div>
+      <div class="side"></div>
+      <div class="center">
+        <div class="middle"></div>
+        <div class="middle"></div>
+        <div class="back"></div>
+      </div>
+      <div class="side"></div>
+    </div>
+  </body>
+</html>
