--- a/Project1/21/index.html
+++ b/Project1/21/index.html
@@ -5,18 +5,18 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Chango|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Neucha|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part21">
 
 
-    <a href="../22/index.html">Little lies</a>
-    Little lies
-    Little lies
-    Little lies
-    Little Lies
-    Little Lies
+    <a href="../22/index.html">Little lies</a></p>
+    Little lies</p>
+    Little lies</p>
+    Little lies</p>
+    Little Lies</p>
+    Little Lies</p>
 
 
 
