--- a/Project1/15/index.html
+++ b/Project1/15/index.html
@@ -11,9 +11,9 @@
 <body class="part15">
 
 
-    What kind of love don't <a id="text15"href="../16/index.html">hurt</a> so bad
-    What kind of love don't feel this way
-    What kind of love would make me fold
+    What kind of love don't <a id="text15"href="../16/index.html">hurt</a> so bad </p>
+    What kind of love don't feel this way</p>
+    What kind of love would make me fold</p>
 
 
 
