--- a/Project1/19/index.html
+++ b/Project1/19/index.html
@@ -11,7 +11,7 @@
 <body class="part19">
 
 
-      <a href="../20/index.html">Little lies</a></p>
+      <a id="text19" href="../20/index.html">Little lies</a></p>
     Little lies</p>
     Little lies</p>
     Little lies</p>
