--- a/Project1/20/index.html
+++ b/Project1/20/index.html
@@ -11,7 +11,7 @@
 <body class="part20">
 
 
-      <a href="../21/index.html">Little lies</a></p>
+      <a id="text20" href="../21/index.html">Little lies</a></p>
     Little lies</p>
     Little lies</p>
     Little lies</p>
