--- a/Project1/21/index.html
+++ b/Project1/21/index.html
@@ -11,7 +11,7 @@
 <body class="part21">
 
 
-    <a href="../22/index.html">Little lies</a></p>
+    <a id="text21" href="../22/index.html">Little lies</a></p>
     Little lies</p>
     Little lies</p>
     Little lies</p>
