--- a/Project1/23/index.html
+++ b/Project1/23/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Chango|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Neucha|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part23">
+<div id="link23">
 
-
-    <a href="../24/index.html">Little lie</a>
-
+    <a id="text23" href="../24/index.html">Little lie</a>
+</div>
 
 
 
