--- a/Project1/27/index.html
+++ b/Project1/27/index.html
@@ -7,15 +7,11 @@
   <link rel="stylesheet" href="../css/main.css">
 <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
-
-<body class="part6">
-
-  You like to call me <a  id="text6" href="../27/index.html">koala</a></p>
-  I'll be your simba, you're nala</p>
-
-  Wherever you go I'll follow</p>
+<body class="part27">
+  <div id="link27">
 
 
-
+  <a id="text27" href="../7/index.html">Little Lies</a>
+</div>
 </body>
 </html>
