--- a/Project1/22/index.html
+++ b/Project1/22/index.html
@@ -5,17 +5,17 @@
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Permanent+Marker&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Chango|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Neucha|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="part22">
+<div id="link22">
 
 
-
-Na na na na na na na   <a href="../23/index.html">na</a>
-
+   <a id="text22" href="../23/index.html">Na na na na na na na na</a>
 
 
+</div>
 
 </body>
 </html>
