--- a/Project1/25/index.html
+++ b/Project1/25/index.html
@@ -8,12 +8,12 @@
   <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Be+Vietnam|Chango|Courgette|Gochi+Hand|Indie+Flower|Kalam|Lato|Mansalva|Neucha|Noto+Sans+TC|Open+Sans|Permanent+Marker|Roboto|Seymour+One|Shadows+Into+Light|Titillium+Web&display=swap" rel="stylesheet">
 </head>
 
-<body class="part18">
+<body class="part25">
+
+  Meet me at the studio </p>
+  I just wanna <a id="text26" href="../26/index.html">play</a> you something
 
 
-      <a id="text18" href="../19/index.html">Little lies</a></p>
-    Little lies</p>
-    Little lies</p>
 
 
 
