--- a/Project1/11/index.html
+++ b/Project1/11/index.html
@@ -11,7 +11,7 @@
 <body class="part11">
 <div id="link11">
 
-  <a id="text11" href="../12/index.html">i dont know</a>
+<a id="text11" href="../12/index.html">i don't know</a></p>
 
 </div>
 
