--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <a href="Exercise6/index.html">Exercise 6</a></p>
   <a href="Exercise7/index.html">Exercise 7</a></p>
   <a href="Exercise8/index.html">Exercise 8</a></p>
+  <a href="Exercise9/index.html">Exercise 9</a></p>
+  <a href="Exercise10/index.html">Exercise 10</a></p>
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
 </body>
