--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <a href="Exercise9/index.html">Exercise 9</a></p>
   <a href="Exercise10/index.html">Exercise 10</a></p>
   <a href="Exercise11/index.html">Exercise 11</a></p>
+  <a href="Exercise13/index.html">Exercise 13</a></p> 
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
 </body>
