--- a/Exercise12/BookCover2/index.html
+++ b/Exercise12/BookCover2/index.html
@@ -7,8 +7,17 @@
   </head>
 
 <body>
-        <div class="container">
-          <h1>the legend of</h1>
+        <div id="container">
+
+          <svg viewBox="0 0 500 500">
+      <path id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
+      <text width="500">
+        <textPath xlink:href="#curve">
+        the legend of
+        </textPath>
+      </text>
+    </svg>
+
 
         </div>
 </body>
