--- a/Exercise12/index.html
+++ b/Exercise12/index.html
@@ -7,6 +7,10 @@
 
 <body>
 
-  
+  <a href="BookCover1/index.html"><b>Book Cover 1</b></a></p>
+  <a href="BookCover2/index.html"><b>Book Cover 2</b></a></p>
+  <a href="BookCover3/index.html"><b>Book Cover 3</b></a></p>
+  <a href="BookCover4/index.html"><b>Book Cover 4</b></a></p>
+  <a href="BookCover5/index.html"><b>Book Cover 5</b></a></p>
 </body>
 </html>
