--- a/Exercise12/BookCover1/index.html
+++ b/Exercise12/BookCover1/index.html
@@ -3,11 +3,19 @@
   <head>
     <title>Practice</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://use.typekit.net/txo8iaa.css">
   </head>
 
 <body>
         <div class="container">
-          
+          <div class="cover">
+            <img src="cover.png" alt="cover"  >
+            <h1> The  </p> Legend </p> Of </p> </h1>
+            <h2> SLEEPY </p> HOLLOW </p> </h2>
+            <h3> by WASHINGTON IRVING </h3>
+            <p>  In the bosom of one of those spacious coves which indent the eastern shore of the Hudson, at that broad expansion of the river denominated by the ancient Dutch navigators the Tappan Zee, and where they always prudently shortened sail and implored the protection of St. Nicholas when they crossed, there lies a small market town or rural port, which by some is called Greensburgh, but which is more generally and properly known by the name of Tarry Town. This name was given, we are told, in
+               </p>
+          </div>
 
         </div>
 </body>
