--- a/Exercise12/BookCover4/index.html
+++ b/Exercise12/BookCover4/index.html
@@ -3,32 +3,28 @@
   <head>
     <title>Practice</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://use.typekit.net/ull1bes.css">
+  <link rel="stylesheet" href="https://use.typekit.net/txo8iaa.css">
   </head>
 
 <body>
         <div id="container">
           <div class="top">
-            <h1> The Legend of</h1>
-          </div>
-          <div class="pumpkin">
-            <img src="pumpkin.png" alt="Pumpkin"  >
-          </div>
-          <div class="scary">
-            <img src="scary.png" alt="SLEEPYHOLLOW"  >
+            <h1> THE LEGEND OF</h1>
           </div>
           <div class="bottom">
-            <h2> Washington Irvin </h2>
-
+            <h2> SLEEPY HOLLOW</h2>
+            <h3> Washington Irvin</h3>
           <p>  In the bosom of one of those spacious coves which indent the eastern shore of the Hudson, at that broad expansion of the river denominated by the ancient Dutch navigators the Tappan Zee, and where they always prudently shortened sail and implored the protection of St. Nicholas when they crossed, there lies a small market town or rural port, which by some is called Greensburgh, but which is more generally and properly known by the name of Tarry Town. This name was given, we are told, in former days, by the good housewives of the adjacent country, from the inveterate propensity of their husbands to linger about the village tavern on market days. Be that as it may, I do not vouch for the fact, but merely advert to it, for the sake of being precise and authentic. Not far from this village, perhaps about two miles, there is a little valley or rather lap of land among high hills, which is one of the quietest places in the whole world. A small brook glides through it, with just murmur enough to lull one to repose; and the occasional whistle of a quail or tapping of a woodpecker is almost the only sound that ever breaks in upon the uniform tranquillity.
-             </p>
-             <p>
-             I recollect that, when a stripling, my first exploit in squirrel
-             </p>
-           </div>
+           </p>
+            <p>
+            I recollect that, when a stripling, my first exploit
+            </p>
 
-
+          </div>
 
         </div>
+
+
+
 </body>
     </html>
