--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <a href="Exercise11/index.html">Exercise 11</a></p>
   <a href="Exercise12/index.html">Exercise 12</a></p>
   <a href="Exercise13/index.html">Exercise 13</a></p>
+  <a href="Exercise14/index.html">Exercise 14</a></p>
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
 </body>
