--- a/Exercise12/index.html
+++ b/Exercise12/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Alejandro's Page</title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
