--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
   <a href="Exercise14/index.html">Exercise 14</a></p>
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
+  <a href="Project2/index.html"><b>Project 2</b></a></p>
 </body>
 </html>
