--- a/Project2/Images/768/notext/index.html
+++ b/Project2/Images/768/notext/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>Alejandro's Page</title>
-  <link rel="stylesheet" href="../../../css/main.css">
+  <link rel="stylesheet" href="../../../../css/main.css">
 </head>
 
 <body>
-  <img src="notext320.png">
+  <img src="notext768.png">
 
 </body>
 </html>
