--- a/Project2/index.html
+++ b/Project2/index.html
@@ -6,10 +6,9 @@
 </head>
 
       <body>
-        <a href="320/index.html">320px</a></p>
-        <a href="768/index.html">768px</a></p>
-        <a href="1024/index.html">1024px</a></p>
-        <a href="1440/index.html">1440px</a></p>
+        <a href="Images/index.html">Images</a></p>
+        <a href="Page/index.html">Page</a></p>
+
 
       </body>
 </html>
