--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="Exercise2/index.html">Exercise 2</a></p>
   <a href="Exercise3/index.html">Exercise 3</a></p>
   <a href="Exercise4/index.html">Exercise 4</a></p>
-    <a href="Exercise5/index.html">Exercise 5</a></p>
+  <a href="Exercise5/index.html">Exercise 5</a></p>
   <a href="Exercise6/index.html">Exercise 6</a></p>
   <a href="Exercise7/index.html">Exercise 7</a></p>
   <a href="Exercise8/index.html">Exercise 8</a></p>
@@ -19,8 +19,9 @@
   <a href="Exercise10/index.html">Exercise 10</a></p>
   <a href="Exercise11/index.html">Exercise 11</a></p>
   <a href="Exercise12/index.html">Exercise 12</a></p>
-  <a href="Exercise13/index.html">Exercise 13</a></p>
+  <a href="Exercise13/index.html">Exercise 13<6/a></p>
   <a href="Exercise14/index.html">Exercise 14</a></p>
+  <a href="Exercise16/index.html">Exercise 1</a></p>
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
   <a href="Project2/index.html"><b>Project 2</b></a></p>
