--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="Exercise10/index.html">Exercise 10</a></p>
   <a href="Exercise11/index.html">Exercise 11</a></p>
   <a href="Exercise12/index.html">Exercise 12</a></p>
-  <a href="Exercise13/index.html">Exercise 13<6/a></p>
+  <a href="Exercise13/index.html">Exercise 13</a></p>
   <a href="Exercise14/index.html">Exercise 14</a></p>
   <a href="Exercise16/index.html">Exercise 16</a></p>
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
