--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <a href="Exercise13/index.html">Exercise 13</a></p>
   <a href="Exercise14/index.html">Exercise 14</a></p>
   <a href="Exercise16/index.html">Exercise 16</a></p>
+  <a href="Exercise17/index.html">Exercise 17</a></p>
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
   <a href="Project2/index.html"><b>Project 2</b></a></p>
