--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
   <a href="Exercise17/index.html">Exercise 17</a></p>
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
-  <a href="Project2-2/index.html"><b>Project 2</b></a></p>
+  <a href="Project2-2/Page/index.html"><b>Project 2</b></a></p>
 </body>
 </html>
