--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <a href="Exercise14/index.html">Exercise 14</a></p>
   <a href="Exercise16/index.html">Exercise 16</a></p>
   <a href="Exercise17/index.html">Exercise 17</a></p>
+  <a href="Exercise18(Guess Game)/index.html">Exercise18 (Guess Game)</a></p>
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
   <a href="Project2-2/index.html"><b>Project 2</b></a></p>
