--- a/Exercise18(Guess Game)/index.html
+++ b/Exercise18(Guess Game)/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<!-- Number Guess -->
-		<!-- <div id="container">
+		<div id="container">
 			<h1>Guess a Number</h1>
 			<input type="Number" name="guess">
 			<div id="submit" class="button">
@@ -15,16 +15,16 @@
 			<div class="guesses">
 				<p></p>
 			</div>
-		</div> -->
+		</div>
 
 		<!-- Color Guess -->
-		<div id="container">
-			<h1>Guess The Smash Character</h1>
+		<!-- <div id="container">
+			<h1>What's the name of the background color?</h1>
 			<input id="guess" type="text" name="guess">
 			<div id="submit" class="button">
 				<p>Guess</p>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- find by googling "jquery cdn" then clicking on the jquery CDN link. I use the uncompressed 3.X script link -->
 		<script
@@ -33,9 +33,9 @@
   crossorigin="anonymous"></script>
 
 		<!-- Number Guess JS -->
-		<!-- <script src="js/number.js"></script> -->
+		<script src="js/number.js"></script>
 
 		<!-- Color Guess JS -->
- 		<script src="js/color.js"></script>
+ 		<!-- <script src="js/color.js"></script> -->
 	</body>
 </html>
