--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
   <a href="Project2-2/index.html"><b>Project 2</b></a></p>
+    <a href="Project4/index.html"><b>PleaseCalmDown.com</b></a></p>
 </body>
 </html>
