--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <a href="PracticeClassesandIDs/index.html">Practice Classes and IDs</a></p>
   <a href="Project1/index.html"><b>Project 1</b></a></p>
   <a href="Project2-2/index.html"><b>Project 2</b></a></p>
-    <a href="Project4/index.html"><b>Project 4</b></a></p>
-    <a href="Project5/index.html"><b>PleaseCalmDown.com</b></a></p>
+  <a href="Project4/index.html"><b>Project 4</b></a></p>
+  <a href="Pleasecalmdown.com/index.html"><b>PleaseCalmDown.com</b></a></p>
 </body>
 </html>
